add tensorflow notebook

--- a/notebook/tensorflow-start.ipynb
+++ b/notebook/tensorflow-start.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "tf中session的使用有三种方法，以上是其中的一种,示例中都使用了with关键词，可以不使用，单独创建的方式，但要注意用完session后关闭"
+    "tf中session的使用有三种方法，以上是其中的一种,示例中都使用了with关键词，可以不使用，如果是单独创建的方式，要注意用完session后关闭"
    ]
   },
   {
