--- a/notebook/LaTeX notes.ipynb
+++ b/notebook/LaTeX notes.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1. 开始和结束用$或者\\(jupter中好像\\不生效),$$用于公式独占一行,如果用 \\begin{equation} 和 \\end{equation}，则公式除了独占一行还会自动被添加序号， 如何不想编号则使用 \\begin{equation*} 和 \\end{equation*}"
+    "#### 1. 开始和结束用$或者反斜杠(jupter中好像反斜杠不生效),$$用于公式独占一行,如果用 \\begin{equation} 和 \\end{equation}，则公式除了独占一行还会自动被添加序号， 如何不想编号则使用 \\begin{equation*} 和 \\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    " $x_1$ , $f(x)=ax + b$ , \\(x^y\\) , $$y=ax$$  \\begin{equation}y=ax+b\\end{equation}  \\begin{equation*}y=x^2\\end{equation*} ，生成公式如下："
    ]
   },
   {
@@ -25,7 +32,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2. 上标(^)和下标（_）"
+    "#### 2. 上标(^)和下标（_）"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$x^2$ , $x^{x^2}$ , $x_a$ , $lim_{x=1}$ ，生成公式如下："
    ]
   },
   {
@@ -39,7 +53,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 3. 分数表示(\\frac{分子}{分母})"
+    "#### 3. 分数表示(\\frac{分子}{分母})"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$\\frac{11}{12}$ , $\\frac{a}{b}$ , $\\frac{x^2}{y_1}$ ，生成公式如下："
    ]
   },
   {
@@ -53,7 +74,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 4. 根式（\\sqrt[n]{表达式}）"
+    "#### 4. 根式（\\sqrt[n]{表达式}）"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$\\sqrt{2}$ , $\\sqrt[3]{8}$ , $\\sqrt[x]{x+y+z_1}$ ，生成公式如下："
    ]
   },
   {
@@ -67,7 +95,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 5. 求和（\\sum ,其中可选参数\\limits可以改变上下标为上下行，缺省为\\nolimits）"
+    "#### 5. 求和（\\sum ,其中可选参数\\limits可以改变上下标为上下行，缺省为\\nolimits）"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$\\sum\\limits_{n=1}^n k=\\frac{n(n+1)}{2}$ ， $\\sum_{a}^{a=b}=ax+b$ ，生成公式如下："
    ]
   },
   {
@@ -81,21 +116,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 6. 求导（偏微分符号\\partial）、极限"
+    "#### 6. 求导（偏微分符号\\partial）、极限"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$\\frac{\\partial u}{\\partial t}$ ， $\\lim\\limits_{x\\rightarrow0}{\\frac{3x^2+7x^4}{x^2+5x^3}}=3$ ， $\\lim\\limits_{x \\to +\\infty}$ , $\\lim\\limits_{x\\rightarrow+\\infty}$ ，生成公式如下："
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\frac{\\partial u}{\\partial t}$ ， $\\lim\\limits_{x\\rightarrow0}{\\frac{3x^2+7x^4}{x^2+5x^3}}=3$ ， $\\lim\\limits_{x \\to +\\infty}$ , $\\lim\\limits_{x\\rightarrow+\\infty}$\n"
+    "$\\frac{\\partial u}{\\partial t}$ ， $\\lim\\limits_{x\\rightarrow0}{\\frac{3x^2+7x^4}{x^2+5x^3}}=3$ ， $\\lim\\limits_{x \\to +\\infty}$ , $\\lim\\limits_{x\\rightarrow+\\infty}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 7. 积分（\\int）"
+    "#### 7. 积分（\\int）"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$\\int_0^{+\\infty}\\cos\\theta d\\theta=\\sin\\theta$ ，生成公式如下："
    ]
   },
   {
@@ -109,9 +158,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 8. 矩阵，行之间用\\\\分隔，列之间用&分隔\n",
+    "#### 8. 矩阵，行之间用\\\\分隔，列之间用&分隔\n",
     "    1. 数组形式(\\begin{array}{c|l|r} \\end{array}) ，其中clr为对齐方式，分别对应：居中，左对齐，右对齐\n",
     "    2. 矩阵{matrix}的形式，可用的为matrix,pmatrix,bmatrix,Bmatrix,vmatrix,Vmatrix，区别在于最外层的包装符号不同"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$\\left(\\begin{array}{ccc} a&b&c\\\\ d&e&f \\\\ g&h&i \\end{array}\\right)$ , \n",
+    "$\\left\\{\\begin{array}{rrr}1&2&3 \\\\ 4&5&6 \\\\ 7&8&9\\end{array}\\right\\}$,\n",
+    "$\\begin{matrix}0&1\\\\0&2\\end{matrix}$，$\\begin{bmatrix}3&4\\\\5&6\\end{bmatrix}$ ，生成公式如下："
    ]
   },
   {
@@ -127,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 附录 ： 各种数学及希腊符号\n",
+    "#### 附录 ： 各种数学及希腊符号\n",
     "https://www.sharelatex.com/learn/List_of_Greek_letters_and_math_symbols"
    ]
   }
